# BFIOCL

./: .gitignore  Doxyfile  README  bayer.cl  conversions.cl  test.cl
BayerFilter/: BayerFilter.sln  BayerFilterTests.props  CMakeLists.txt  gtestD.props
BayerFilter/BayerFilter/: BayerFilter.vcxproj  BayerFilter.vcxproj.filters  BayerFilterStream.cpp  BayerFilterStream.h  OpenCLAlgorithm.cpp  OpenCLAlgorithm.h  OpenCLDevice.cpp  OpenCLDevice.h  OpenCLImageFilter.cpp  OpenCLImageFilter.h  Options.cpp  Options.h  main.cpp
BayerFilter/JAICameraInterface/: Camera.cpp  Camera.h  CameraException.h  FakeCamera.cpp  FakeCamera.h  JAICameraInterface.vcxproj  JAICameraInterface.vcxproj.filters  JAICameraInterface.vcxproj.filters.orig  JAICameraInterface.vcxproj.orig
BayerFilter/OpenCLAlgorithmTest/: OpenCLAlgorithmTest.vcxproj  main.cpp
BayerFilter/OpenCLDeviceTest/: BayerFilterTests.props  OpenCLDeviceTest.vcxproj  main.cpp
BayerFilter/OpenCLInterface/: CMakeLists.txt  OpenCLAlgorithm.cpp  OpenCLAlgorithm.h  OpenCLAlgorithmsStream.cpp  OpenCLAlgorithmsStream.h  OpenCLBayerFilter.cpp  OpenCLBayerFilter.h  OpenCLDevice.cpp  OpenCLDevice.h  OpenCLException.cpp  OpenCLException.h  OpenCLFloatToInt.cpp  OpenCLFloatToInt.h  OpenCLHelpers.cpp  OpenCLHelpers.h  OpenCLIntToFloat.cpp  OpenCLIntToFloat.h  OpenCLInterface.vcxproj  OpenCLInterface.vcxproj.filters  OpenCLInvertImage.cpp  OpenCLInvertImage.h  bayer - Kopia.cl  bayer.cl  bayer2.cl  conversions.cl  invert.cl
BayerFilter/cmake/: FindOpenCL.cmake
doc/: PR12sr512.doc  PR12sr512.odt
doxy-doc/html/: _bayer_filter_stream_8h_source.html  _camera_8h_source.html  _camera_exception_8h_source.html  _fake_camera_8h_source.html  _open_c_l_algorithm_8h_source.html  _open_c_l_algorithms_stream_8h_source.html  _open_c_l_bayer_filter_8h_source.html  _open_c_l_device_8h_source.html  _open_c_l_exception_8h_source.html  _open_c_l_float_to_int_8h_source.html  _open_c_l_helpers_8h_source.html  _open_c_l_image_filter_8h_source.html  _open_c_l_int_to_float_8h_source.html  _open_c_l_invert_image_8h_source.html  annotated.html  (+115 more)
presentation/: Makefile  beamerthemeAGH.sty  kernel.cl  presentation.tex
(+163 files in other folders)
